Preserve deterministic filter summary ordering
Co-authored-by: chicoreus <3864169+chicoreus@users.noreply.github.com>